Copyright: (c) Cody Precord 2005-2008
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.2.xx
DATE 0x/xx/2008
10th Alpha Release

NEWS:


NEW: [features/improvements]
+Support for using C style (/* */) comments in Editra Style Sheets
+Improved syntax highlighting sample/test files
+Use Softtabs by default
+Option to use backspace to dedent when in an indent region
+Support for magic comments as described in pep 0263 for setting the encoding
 of a document. If an encoding is not explicitly set the default will still be
 to use utf-8.
+Improved unicode support
+Option to set a preffered lexer for new files so highlighting and other 
features are autmatically applied when starting a new buffer.
+New plugin "CommentBrowser" for listing and browsing TODO statements in the
current buffer
+New icon theme available based on the Crystal Project Icons
+All existing icon themes have recieved some minor updates
+New bundled plugin "Launch" for running scripts and viewing output.
+Improved Windows installer / Better Windows Desktop integration

BUG FIXES:
+Fix bug with turning off syntax highlighting in the preference dialog
+Exiting Editra from a right click on the Windows taskbar saving invalid window
size and postion for next launch.

#-----------------------------------------------------------------------------#

VERSION 0.2.50
DATE 01/19/2008
9th Alpha Release

NEWS:

I am happy to announce the first release of Editra for 2008. It has been a 
slightly longer that usual development cycle for this release so hopefully 
extra amount of work that went in will be visible. Here are some of the most 
notable points in this release, there is a new version of the bundled 
FileBrowser plugin that has been enhanced to be able handle most file system 
operations. There were also a number of UI and usability improvements made to 